# mnemonic

./: .gitignore  Makefile  README.md  SPEC.md  claude_code_memory.py  pyproject.toml
docs/: How-It-Works.md  api-reference.md  integrations.md  quickstart.md  storage.md  strategies.md
scripts/: push.sh
src/mnemonic/: __init__.py
src/mnemonic/core/: __init__.py  config.py  context_builder.py  exceptions.py  memory.py  models.py  sessions.py  token_tracker.py
src/mnemonic/extraction/: __init__.py  decisions.py  entities.py  threads.py
src/mnemonic/integrations/: __init__.py  claude_code.py  mcp.py  opencoder.py
src/mnemonic/storage/: __init__.py  base.py  episodic.py  memory.py  vector.py
src/mnemonic/strategies/: __init__.py  base.py  hybrid.py  importance.py  recency.py  semantic.py
tests/: test_extraction.py  test_mnemonic_memory.py  test_storage.py  test_strategies.py  test_token_tracker.py
