[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemonic"
version = "0.1.0"
description = "Intelligent Memory Management for LLM Applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.9"
keywords = ["llm", "memory", "context", "ai", "memory-management", "claude", "opencoder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
vector = [
    "chromadb>=0.4.0",
    "weaviate-client>=3.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
]
all = [
    "mnemonic[dev,vector,llm,langchain]",
]

[project.urls]
Homepage = "https://github.com/yourusername/mnemonic"
Documentation = "https://mnemonic.readthedocs.io"
Repository = "https://github.com/yourusername/mnemonic"
Issues = "https://github.com/yourusername/mnemonic/issues"

[project.scripts]
mnemonic = "mnemonic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]



[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
